@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.281 2005/12/22 11:47:24 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.282 2005/12/22 14:54:50 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -63,6 +63,9 @@ PH/10 Fixed another bug related to PH/04 above: if an incoming message had a
 PH/11 The exinext utility has a -C option for testing purposes, but although
       the given file was scanned by exinext itself; it wasn't being passed on
       when Exim was called.
+
+PH/12 In the smtp transport, treat an explicit ECONNRESET error the same as
+      an end-of-file indication when reading a command response.
 
 
 Exim version 4.60
